--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -174,6 +174,14 @@
       "OPEN_OLD_VERSION": "Open old version",
       "NO_FOLDER_SELECTED": "No folder selected",
       "SELECT_FOLDER": "Select a folder"
+    },
+    "DURATION": {
+      "HOURS": "Hours",
+      "HH": "hh",
+      "MINUTES": "Minutes",
+      "MM": "mm",
+      "SECONDS": "Seconds",
+      "SS": "ss"
     }
   }
 }
