--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -174,6 +174,14 @@
       "OPEN_OLD_VERSION": "Apri vecchia versione",
       "NO_FOLDER_SELECTED": "Nessuna cartella selezionata",
       "SELECT_FOLDER": "Seleziona una cartella"
+    },
+    "DURATION": {
+      "HOURS": "Ore",
+      "HH": "ore",
+      "MINUTES": "Minuti",
+      "MM": "min",
+      "SECONDS": "Secondi",
+      "SS": "sec"
     }
   }
 }
