--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -193,6 +193,14 @@
       "HIDE_ERROR": "Hide the error",
       "UPLOADING": "Uploading...",
       "UPLOADING_ATTACHMENT_WARNING": "Loading the attachment, don't change page"
+    },
+    "ECHO": {
+      "HOMEPAGE": "Back to the homepage",
+      "GO_TO_HOME_HINT": "Click to go to the homepage of the service",
+      "REQUEST_FAILED": "The request failed; try again.",
+      "EMAIL_CHANGED": "Email address successfully updated. You now have to sign-in again.",
+      "TEAM_JOINED": "You successfully joined the team.",
+      "ACCOUNT_CONFIRMED": "Account confirmed: you can now sign-in."
     }
   }
 }
