--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -241,6 +241,25 @@
       "ATTACHMENTS": "Allegati",
       "SUCCESSFULLY_SENT": "Inviato con successo",
       "SENDING_FAILED": "Invio fallito"
+    },
+    "OFFLINE": {
+      "YOU_ARE_OFFLINE": "Sei offline",
+      "FEATURES_REDUCED_CONTENTS_NOT_UP_TO_DATE": "Le funzionalità sono ridotte",
+      "OFFLINE_MANAGER": "Offline manager",
+      "LAST_SYNC": "Ultima sincronizzazione",
+      "LOADING": "Caricamento...",
+      "SYNC_NOW": "Sincronizza ora",
+      "ERROR_DURING_LAST_SYNC": "Si è verificato un errore durante l'ultima sincronizzazione; per favore riprova.",
+      "UPLOAD": "Upload",
+      "UPLOAD_QUEUE_REQUESTS_EXPLANATION": "Le azioni create offline devono essere caricate online",
+      "DOWNLOAD": "Download",
+      "DOWNLOAD_RESOURCES_EXPLANATION": "Lista delle risorse disponibili quando offline",
+      "NOW": "Adesso",
+      "SYNC_IN_PROGRESSS": "Sincronizzazione in corso",
+      "NUM_ELEMENTS_TO_SYNC": "Numero elementi da sincronizzare",
+      "REQUEST_FAILED": "Richiesta fallita; riprova o cancella la richiesta",
+      "NO_ELEMENTS_TO_UPLOAD": "Nessun elemento da caricare",
+      "DELETION_IS_IRREVERSIBLE": "La cancellazione è irreversibile"
     }
   },
   "IDEA_VARIABLES": {
