IDEA Ionic Extra v2.12.5

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -208,10 +208,12 @@
       "ADDRESS_HINT": "Street address, P.O. box, company name, c/o",
       "ADDRESS2": "Supplementary address info",
       "ADDRESS2_HINT": "Apartment, suite, unt, building, floor, etc.",
+      "POSTCODE": "Postal code",
+      "POSTCODE_HINT": "Postal code/ZIP code",
       "CITY": "City",
       "CITY_HINT": "City",
-      "POSTCODE": "Postal code",
-      "POSTCODE_HINT": "Postal code / ZIP code",
+      "PROVINCE": "Province",
+      "PROVINCE_HINT": "Province, district, area",
       "COUNTRY": "Country",
       "COUNTRY_HINT": "Country",
       "CONTACT": "Fullname",
