--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -208,10 +208,12 @@
       "ADDRESS_HINT": "Via e civico, nome azienda, c/o",
       "ADDRESS2": "Informazioni supplementari indirizzo",
       "ADDRESS2_HINT": "Appartamento, piano, edificio, unità, ecc.",
-      "CITY": "Città",
-      "CITY_HINT": "Città",
       "POSTCODE": "CAP",
       "POSTCODE_HINT": "Codice di Avviamento Postale / codice ZIP",
+      "CITY": "Città",
+      "CITY_HINT": "Città",
+      "PROVINCE": "Provincia",
+      "PROVINCE_HINT": "Provincia",
       "COUNTRY": "Nazione",
       "COUNTRY_HINT": "Nazione",
       "CONTACT": "Nome completo",
