Team management (IDEA's pool)

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -265,6 +265,41 @@
       "HUGE_SYNC_NEED_MANUAL_CONFIRMATION": "There is a lot of data to synchronise. Confirm to proceed.",
       "NUM_ELEMENTS_TO_CACHE": "{{num}} elements to cache",
       "FORCE_FULL_SYNC": "Force full synchronisation"
+    },
+    "TEAMS": {
+      "SELECT_A_TEAM": "Select a team",
+      "YOU_NEED_A_TEAM_TO_CONTINUE": "You need a team to continue",
+      "NEW_TEAM": "New team",
+      "SELECT_NAME_FOR_NEW_TEAM": "Choose a name",
+      "TEAM_NAME": "Team name",
+      "CURRENT": "Current",
+      "SELECT_TEAM_": "Select team {{team}}",
+      "CURRENT_TEAM_EXPLANATION": "Currently selected team",
+      "CREATE_TEAM": "Create a new team",
+      "TEAM_SETTINGS": "Configure the settings of team {{team}}",
+      "TEAM_MEMBERS": "Configure the members of team {{team}}",
+      "TEAM_NOT_ACTIVATED_DISCLAIMER": "Team has not been activated yet; contact an administrator",
+      "USERS": "Users",
+      "INVITE": "Invite",
+      "INVITE_USER_HINT": "Invite a member to the team",
+      "ADMIN": "Admin",
+      "OWNER": "Owner",
+      "INVITED": "Invited",
+      "CAN_MANAGE_TEAM": "The user can edit the team settings and manage the team members",
+      "IS_OWNER": "The user is the current owner of the team",
+      "PENDING_INVITATION": "The user has been invited in the team but hasn't accepted yet",
+      "ACTIONS_ON_USER_": "Actions on {{user}}",
+      "INVITE_USER": "Invite a user",
+      "EMAIL_TO_INVITE": "Email address of the user",
+      "USER_NOT_FOUND_OR_ALREADY_JOINED": "The user is already part of the team",
+      "INVITE_SENT": "Invite sent",
+      "MANAGE_PERMISSIONS": "Manage the permissions",
+      "UNJOIN": "Leave the team",
+      "KICK_OUT": "Kick-out the user",
+      "USER_DELETED": "User deleted",
+      "COULDNT_LOAD_LIST": "Couldn't load the list",
+      "MAIN_EXPLANATION": "The users in your team. You can manage their permissions and add new users",
+      "DELETION_OPERATION_FAILED": "Operation failed; make sure the user doesn't have active memberships in other services"
     }
   },
   "IDEA_VARIABLES": {
