--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -265,6 +265,41 @@
       "HUGE_SYNC_NEED_MANUAL_CONFIRMATION": "Sono presenti molti dati da sincronizzare. Conferma se vuoi continuare.",
       "NUM_ELEMENTS_TO_CACHE": "{{num}} elementi da aggiornare",
       "FORCE_FULL_SYNC": "Forza sincronizzazione completa"
+    },
+    "TEAMS": {
+      "SELECT_A_TEAM": "Seleziona un team",
+      "YOU_NEED_A_TEAM_TO_CONTINUE": "Hai bisogno di un team per continuare",
+      "NEW_TEAM": "Nuovo team",
+      "SELECT_NAME_FOR_NEW_TEAM": "Scegli un nome",
+      "TEAM_NAME": "Nome del team",
+      "CURRENT": "Attuale",
+      "SELECT_TEAM_": "Seleziona il team {{team}}",
+      "CURRENT_TEAM_EXPLANATION": "Team attualmente selezionato",
+      "CREATE_TEAM": "Crea un nuovo team",
+      "TEAM_SETTINGS": "Impostazioni del team {{team}}",
+      "TEAM_MEMBERS": "Membri del team {{team}}",
+      "TEAM_NOT_ACTIVATED_DISCLAIMER": "Il team non è ancora stato attivato; contatta un amministratore",
+      "USERS": "Utenti",
+      "INVITE": "Invita",
+      "INVITE_USER_HINT": "Invita un nuovo utente",
+      "ADMIN": "Amministratore",
+      "OWNER": "Proprietario",
+      "INVITED": "Invitato",
+      "CAN_MANAGE_TEAM": "Può modificare le configurazioni del team e gestirne i membri",
+      "IS_OWNER": "È l'attuale proprietario del team",
+      "PENDING_INVITATION": "L'utente è stato invitato nel team ma non ha ancora accettato",
+      "ACTIONS_ON_USER_": "Azioni su {{user}}",
+      "INVITE_USER": "Invita un utente",
+      "EMAIL_TO_INVITE": "Indirizzo email dell'utente",
+      "USER_NOT_FOUND_OR_ALREADY_JOINED": "L'utente è già parte del team",
+      "INVITE_SENT": "Invito inviato",
+      "MANAGE_PERMISSIONS": "Configura permessi",
+      "UNJOIN": "Lascia il team",
+      "KICK_OUT": "Rimuovi l'utente dal team",
+      "USER_DELETED": "Utente cancellato",
+      "COULDNT_LOAD_LIST": "Errore nel caricare la lista",
+      "MAIN_EXPLANATION": "Gli utenti del tuo team. Puoi gestire i loro permessi o aggiungere nuovi utenti",
+      "DELETION_OPERATION_FAILED": "Operazione fallita; verifica che l'utente non sia registrato in altri servizi"
     }
   },
   "IDEA_VARIABLES": {
