--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -281,6 +281,7 @@
       "TEAM_NOT_ACTIVATED_DISCLAIMER": "Il team non è ancora stato attivato; contatta un amministratore",
       "USERS": "Utenti",
       "INVITE": "Invita",
+      "CANCEL": "Cancella",
       "INVITE_USER_HINT": "Invita un nuovo utente",
       "ADMIN": "Amministratore",
       "OWNER": "Proprietario",
