--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -275,11 +275,13 @@
       "CURRENT": "Current",
       "SELECT_TEAM_": "Select team {{team}}",
       "CURRENT_TEAM_EXPLANATION": "Currently selected team",
-      "CREATE_TEAM": "Create a new team",
+      "CREATE": "Create",
+      "CREATE_TEAM_HINT": "Create a new team",
       "TEAM_SETTINGS": "Configure the settings of team {{team}}",
-      "TEAM_MEMBERS": "Configure the members of team {{team}}",
+      "MEMBERS": "Members",
+      "TEAM_MEMBERS_HINT": "Manage the members of team {{team}}",
       "TEAM_NOT_ACTIVATED_DISCLAIMER": "Team has not been activated yet; contact an administrator",
-      "USERS": "Users",
+      "TEAM_MEMBERS": "Team members",
       "INVITE": "Invite",
       "CANCEL": "Cancel",
       "INVITE_USER_HINT": "Invite a member to the team",
@@ -297,7 +299,7 @@
       "MANAGE_PERMISSIONS": "Manage the permissions",
       "UNJOIN": "Leave the team",
       "KICK_OUT": "Kick-out the user",
-      "USER_DELETED": "User deleted",
+      "USER_REMOVED": "User removed",
       "COULDNT_LOAD_LIST": "Couldn't load the list",
       "MAIN_EXPLANATION": "The users in your team. You can manage their permissions and add new users",
       "DELETION_OPERATION_FAILED": "Operation failed; make sure the user doesn't have active memberships in other services"
