--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -275,11 +275,13 @@
       "CURRENT": "Attuale",
       "SELECT_TEAM_": "Seleziona il team {{team}}",
       "CURRENT_TEAM_EXPLANATION": "Team attualmente selezionato",
-      "CREATE_TEAM": "Crea un nuovo team",
+      "CREATE": "Crea",
+      "CREATE_TEAM_HINT": "Crea un nuovo team",
       "TEAM_SETTINGS": "Impostazioni del team {{team}}",
-      "TEAM_MEMBERS": "Membri del team {{team}}",
+      "MEMBERS": "Membri",
+      "TEAM_MEMBERS_HINT": "Gestisci i membri del team {{team}}",
       "TEAM_NOT_ACTIVATED_DISCLAIMER": "Il team non è ancora stato attivato; contatta un amministratore",
-      "USERS": "Utenti",
+      "TEAM_MEMBERS": "Membri del team",
       "INVITE": "Invita",
       "CANCEL": "Cancella",
       "INVITE_USER_HINT": "Invita un nuovo utente",
@@ -297,7 +299,7 @@
       "MANAGE_PERMISSIONS": "Configura permessi",
       "UNJOIN": "Lascia il team",
       "KICK_OUT": "Rimuovi l'utente dal team",
-      "USER_DELETED": "Utente cancellato",
+      "USER_REMOVED": "Utente rimosso",
       "COULDNT_LOAD_LIST": "Errore nel caricare la lista",
       "MAIN_EXPLANATION": "Gli utenti del tuo team. Puoi gestire i loro permessi o aggiungere nuovi utenti",
       "DELETION_OPERATION_FAILED": "Operazione fallita; verifica che l'utente non sia registrato in altri servizi"
